@@ -70,7 +70,7 @@
 		>
 			<option value="1">JPUBLISHED</option>
 			<option value="0">JUNPUBLISHED</option>
-			<option value="-2">JTRASH</option>
+			<option value="-2">JTRASHED</option>
 		</field>
 	</fieldset>
 	<fieldset name="metadata" label="JGLOBAL_FIELDSET_METADATA_OPTIONS">
